--- a/app/package.json
+++ b/app/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.9",
     "expo-camera": "^13.2.1",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "file-saver": "^2.0.5",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-canvas": "^0.1.38",
