--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/art": "^1.2.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.4",
     "expo": "~48.0.9",
     "expo-camera": "^13.2.1",
     "expo-image-picker": "^14.1.1",
@@ -20,9 +21,12 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-canvas": "^0.1.38",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-webview": "11.26.0"
+    "react-native-uuid": "^2.0.1",
+    "react-native-webview": "11.26.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
