--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "rascal": "^16.3.0"
+    "rascal": "^16.3.0",
+    "redis": "^4.6.5"
   }
 }
