--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-community/art": "^1.2.0",
+    "@react-native-firebase/app": "^17.4.0",
+    "@react-native-firebase/storage": "^17.4.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.4",
@@ -18,9 +20,11 @@
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "file-saver": "^2.0.5",
+    "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-canvas": "^0.1.38",
+    "react-native-device-info": "^10.4.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
