--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -13,6 +13,7 @@ torch = "^2.0.0"
 transformers = "^4.27.1"
 accelerate = "^0.17.1"
 pika = "^1.3.1"
+firebase-admin = "^6.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
