--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -14,6 +14,7 @@ transformers = "^4.27.1"
 accelerate = "^0.17.1"
 pika = "^1.3.1"
 firebase-admin = "^6.1.0"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
