--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.5",
     "@react-native-community/art": "^1.2.0",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/storage": "^17.4.0",
@@ -24,13 +25,11 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-canvas": "^0.1.38",
-    "react-native-device-info": "^10.4.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-webview": "11.26.0",
-    "rn-fetch-blob": "^0.12.0"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
