--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -15,6 +15,7 @@ accelerate = "^0.17.1"
 pika = "^1.3.1"
 firebase-admin = "^6.1.0"
 python-dotenv = "^1.0.0"
+joblib = "^1.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
