--- a/app/package.json
+++ b/app/package.json
@@ -9,23 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@bam.tech/react-native-image-resizer": "^3.0.5",
-    "@react-native-community/art": "^1.2.0",
-    "@react-native-firebase/app": "^17.4.0",
-    "@react-native-firebase/storage": "^17.4.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "axios": "^1.3.4",
     "expo": "~48.0.9",
     "expo-camera": "^13.2.1",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
-    "file-saver": "^2.0.5",
-    "firebase": "^9.18.0",
+    "firebase": "9.3.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-canvas": "^0.1.38",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-uuid": "^2.0.1",
